changed redirect uri

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "devStart": "nodemon server.js",
     "heroku-postbuild": "cd client && npm i --legacy-peer-deps && npm run build"
   },
   "keywords": [],
