changed website url values

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
 REACT_APP_CLIENT_ID = 90a462053588436b95c0d6ad460a9878
-REACT_APP_REDIRECT_URI='https://stark-lowlands-55596.herokuapp.com'
+REACT_APP_REDIRECT_URI='https://spotifi-app.herokuapp.com'
