--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "devStart": "nodemon server.js",
+    "devStart": "cross-env NODE_ENV=development nodemon server.js",
     "heroku-postbuild": "cd client && npm i --legacy-peer-deps && npm run build"
   },
   "keywords": [],
@@ -17,5 +17,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "spotify-web-api-node": "^5.0.2"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
